# RotationalESC-Website

./: .dockerignore  .env.backend.example  .env.example  .env.frontend.example  .gitignore  CSV_IMPORT_GUIDE.md  DOCKER_README.md  Dockerfile  Makefile  README.md  certbot-entrypoint.sh  deployment-guide.md  docker-compose.backend.yml  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.yml  index.html  nginx-entrypoint.sh  nginx.conf  nginx.dev.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
backend/: .dockerignore  Dockerfile  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  test_api.py  test_db_connection.py  test_email_notifications.py
backend/analytics/: admin.py  middleware.py  models.py  permissions.py  rate_limiting.py  services.py  urls.py  views.py
backend/analytics/migrations/: 0001_initial.py  0002_add_purchase_tracking.py
backend/company/: admin.py  models.py  serializers.py  urls.py  views.py
backend/company/migrations/: 0001_initial.py  (+2 more)
backend/contact/: admin.py  models.py  serializers.py  views.py
backend/equipment/: admin.py  models.py  serializers.py  urls.py  views.py
backend/galleries/: admin.py  models.py  urls.py  views.py
backend/orders/: admin.py  email_service.py  models.py  notification_views.py  serializers.py  stripe_service.py  test_checkout_validation.py  tests.py  urls.py  views.py
backend/products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/rotational_equipment/: asgi.py  settings.py  urls.py  wsgi.py
certbot/: Dockerfile  (+2 more)
(+122 files in other folders)
